MOSIP-33074 MOSIP-33071 MOSIP-33064 resolved alignment and Grammatic issues

--- a/resident-ui/src/app/feature/dashboard/dashboard/dashboard.component.css
+++ b/resident-ui/src/app/feature/dashboard/dashboard/dashboard.component.css
@@ -115,7 +115,7 @@ div.item-card:hover{
 }
 
 .mat-card-title {
-  text-align: left; 
+  /* text-align: left;  */
   font-size: 22px;
   color: #464A8C;
   font-weight: bold;
