--- a/resident-ui/src/app/feature/verify/verify/verify.component.css
+++ b/resident-ui/src/app/feature/verify/verify/verify.component.css
@@ -96,7 +96,7 @@ input {
 .button2 {
   min-width: 108px;
   height: 36px;
-    border:none;
+  border:none;
   color: #ffffff;
   border-radius: 5px;
   cursor: pointer;
@@ -156,7 +156,7 @@ input {
 }
 
 .book-appointment-back-btn {
-  width: 100px;
+  min-width: 100px;
   height: 36px;
   border: 1px solid #909090;
   border-radius: 5px;
